Simplify java 11 rest client